# bevyStudy

./: .gitignore  LICENSE  README.md
stody1/src/hello_world/: mod.rs
study-web/: Cargo.toml  package-lock.json  package.json  webpack.config.js
study-web/js/: index.js
study-web/src/: bevy_main.rs  lib.rs  main.rs
study-web/src/camera_controll/: camera_controll.rs  mod.rs
study-web/src/database/: mod.rs  test_data.rs
study-web/src/graphics_3d/: honeycomb.rs  honeycomb_old.rs  mod.rs  rim.rs
study-web/src/ui/: main_ui.rs  mod.rs
study-web/src/ui/ui_elements/: check_box.rs  mod.rs  side_box.rs  text_box.rs  window_box.rs
study-web/static/: index.html
study-web/tests/: app.rs
study1/: Cargo.toml
study1/src/: main.rs
study1/src/hello_world/: mod.rs
study2/: Cargo.toml  data.save
study2/src/: app_state.rs  consts.rs  lib.rs  main.rs
study2/src/camera/: mod.rs
study2/src/enemies/: mod.rs  resources.rs  systems.rs
study2/src/event_controll/: mod.rs  systems.rs
study2/src/game/: mod.rs  systems.rs
study2/src/game/camera/: mod.rs
study2/src/game/enemies/: components.rs  mod.rs  systems.rs
study2/src/game/event_controll/: events.rs  mod.rs  systems.rs
study2/src/game/player/: components.rs  mod.rs  resources.rs  systems.rs
study2/src/game/star/: components.rs  mod.rs  resources.rs  systems.rs
study2/src/main_menu/: components.rs  mod.rs  style.rs
study2/src/main_menu/systems/: interaction.rs  layout.rs  mod.rs
study2/src/player/: mod.rs  resources.rs  systems.rs
study2/src/star/: mod.rs  systems.rs
study3/: Cargo.toml
study3/savedata/: save.csv
study3/src/: main.rs
study3/src/bird/: components.rs  mod.rs  systems.rs
study3/src/camera/: mod.rs
study3/src/events/: events.rs  mod.rs  systems.rs
study3/src/menu/: components.rs  mod.rs  systems.rs
study3/src/pipe/: components.rs  mod.rs  resources.rs  systems.rs
study3/src/score/: components.rs  mod.rs  resources.rs  systems.rs
study3/src/steat/: mod.rs
study4/: Cargo.toml
study4/src/: main.rs
study4/src/components/: block.rs
study4/src/eventes/: mod.rs  oncollition.rs
study4/src/resources/: mod.rs  timer.rs
study4/src/systems/: block.rs
study5/: Cargo.toml
study5/src/: main.rs
study6/beepytalisem/: Cargo.toml
study6/beepytalisem/src/: main.rs
study6/beepytalisem/src/node/: main_menu.rs  mod.rs
study7/: Cargo.toml
study7-1/: Cargo.toml
study7-1/src/: main.rs
study8/: Cargo.toml  LICENSE_MIT
study8/src/: lib.rs
