# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.87"
dirs = "5.0.1"
bevy = "0.11.3"
rand = "0.8.5"
serde ={ version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
bevy-persistent = { version = "0.3.3", features = ["all"] } #저장 라이브러리
bevy_egui = "0.22.0" #더 쉬운 ui플러그인
hexx = { version = "0.11", features = ["serde"] } #육각형 좌표와 모델 및 기타 길찾기 등의 기능 라이브러리
bevy_mod_picking = {version = "0.15.0", feature = ["backend_raycast", "backend_bevy_ui"]} #엔티티를 ui처럼 이벤트를 받을 수 있게끔 해주는 라이브러리

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.37"
futures = "0.3.28"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"

[profile.dev.package."*"]
opt-level = 3