[package]
name = "study7-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs = "5.0.1"
bevy = "0.11.1"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
serde ={ version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
bevy-persistent = { version = "0.3.3", features = ["all"] } #저장 라이브러리
[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Storage'
]
[profile.dev.package."*"]
opt-level = 3

# [target.wasm32-unknown-unknown]
# runner = "wasm-server-runner"